--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,30 +1,54 @@
-FROM node:20-alpine
+FROM node:20-alpine AS base
 
-# Set working directory
+FROM base AS deps
+
+RUN apk add --no-cache libc6-compat
 WORKDIR /app
 
-# Define build arguments
+COPY package.json package-lock.json* ./
+RUN npm ci --force
+
+
+FROM base AS builder
+WORKDIR /app
+COPY --from=deps /app/node_modules ./node_modules
+COPY . .
+
+ENV NEXT_TELEMETRY_DISABLED=1
+ENV NODE_ENV=production
+
 ARG NEXT_PUBLIC_APP_URL
 ARG NEXT_PUBLIC_API_URL
 
-# Set environment variables for both build and runtime
+ENV NEXT_PRIVATE_STANDALONE=true
+
+RUN npm run build
+
+FROM base AS runner
+WORKDIR /app
+
 ENV NEXT_PUBLIC_APP_URL=${NEXT_PUBLIC_APP_URL}
 ENV NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL}
 
-# Copy package files
-COPY package*.json ./
+ENV NODE_ENV=production
+ENV NEXT_TELEMETRY_DISABLED=1
 
-# Install dependencies
-RUN npm install --force
+RUN addgroup --system --gid 1001 nodejs
+RUN adduser --system --uid 1001 nextjs
 
-# Copy source code
-COPY . .
+COPY --from=builder /app/public ./public
 
-# Build the application with environment variables available
-RUN npm run build
+RUN mkdir .next 
+RUN chown nextjs:nodejs .next
 
-# Expose port
+COPY --from=builder --chown=nextjs:nodejs /app/.next/standalone ./
+COPY --from=builder --chown=nextjs:nodejs /app/.next/static ./.next/static
+
+USER nextjs
+
 EXPOSE 3000
 
-# Start the application
-CMD ["npm", "start"]
+ENV PORT=3000
+ENV HOSTNAME="0.0.0.0"
+
+CMD node server.js
