--- a/api/package.json
+++ b/api/package.json
@@ -2,10 +2,9 @@
   "name": "api",
   "type": "module",
   "scripts": {
-    "start": "concurrently --kill-others --restart-tries 3 \"tsx src/index.ts\" \"tsx src/cron/scheduler.ts\" ",
-    "dev": "concurrently --kill-others --restart-tries 3 \"npm run dev:server\" \"npm run dev:scheduler\"",
-    "dev:server": "tsx watch --clear-screen=false src/index.ts",
-    "dev:scheduler": "tsx watch --clear-screen=false src/cron/scheduler.ts",
+    "build": "tsc",
+    "start": "concurrently --kill-others --restart-tries 3 \"node dist/index.js\" \"node dist/cron/scheduler.js\" ",
+    "dev": "concurrently --kill-others --restart-tries 3 \"tsx watch --clear-screen=false src/index.js\" \"tsx watch --clear-screen=false src/cron/scheduler.js\"",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "email:preview": "email dev --dir ./src/emails/"
@@ -13,8 +12,8 @@
   "dependencies": {
     "@hono/node-server": "^1.14.1",
     "@react-email/components": "0.0.36",
-    "@react-email/render": "1.0.6",
     "@types/node-cron": "^3.0.11",
+    "@types/react": "^19.1.3",
     "axios": "^1.8.4",
     "better-auth": "^1.2.7",
     "better-sqlite3": "^11.9.1",
@@ -31,8 +30,8 @@
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^20.11.17",
-    "@types/react": "^19.1.2",
     "drizzle-kit": "^0.31.0",
-    "tsx": "^4.19.3"
+    "tsx": "^4.19.3",
+    "typescript": "^5.8.3"
   }
 }
