--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -3,8 +3,8 @@
     "target": "ESNext",
     "module": "NodeNext",
     "strict": true,
-    "allowImportingTsExtensions": true,
-    "noEmit": true,
+    // "allowImportingTsExtensions": true,
+    // "noEmit": true,
     "verbatimModuleSyntax": true,
     "skipLibCheck": true,
     "types": ["node"],
@@ -12,6 +12,8 @@
       "@/*": ["./*"]
     },
     "jsx": "react-jsx",
-    "jsxImportSource": "react"
-  }
+    "jsxImportSource": "react",
+    "outDir": "./dist"
+  },
+  "exclude": ["node_modules"]
 }
