Fixed env not appearing in local env

--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -3,8 +3,8 @@
     "target": "ESNext",
     "module": "NodeNext",
     "strict": true,
-    // "allowImportingTsExtensions": true,
-    // "noEmit": true,
+    "allowImportingTsExtensions": true,
+    "noEmit": true,
     "verbatimModuleSyntax": true,
     "skipLibCheck": true,
     "types": ["node"],
