Added EMAIL_FROM env

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@
 DATABASE_URL=./db.sqlite
 BETTER_AUTH_SECRET=
 RESEND_API_KEY=
+EMAIL_FROM= # for example: transactional@example.com
 
 # Reddit 
 REDDIT_CLIENT_ID=
