Fixed all known errors (hopefully)

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # Backend 
-DATABASE_URL=./db.sqlite
+DATABASE_URL=./db.sqlite # DO NOT CHANGE
 BETTER_AUTH_SECRET=
 RESEND_API_KEY=
 EMAIL_FROM= # for example: transactional@example.com
@@ -10,5 +10,5 @@ REDDIT_CLIENT_SECRET=
 REDDIT_USER_AGENT=
 
 # Shared 
-NEXT_PUBLIC_APP_URL=http://localhost:3000
-NEXT_PUBLIC_API_URL=http://localhost:3001
+NEXT_PUBLIC_APP_URL=http://localhost:3000 # DO NOT CHANGE
+NEXT_PUBLIC_API_URL=http://localhost:3001 # DO NOT CHANGE
